--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Biodata Mahasiswa</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
 <div class="container">
@@ -40,6 +40,6 @@
     </div>
 </div>
 
-<script src="script.js"></script>
+<script src="src/script.js"></script>
 </body>
 </html>
